# BinanceFuturesBot

./: .env.example  .replit  ANTI_NOISE_DEPLOYMENT.md  DEPLOY_VPS_GUIDE.md  DYNAMIC_SLTP_DEPLOYMENT_GUIDE.md  FULL_DEPLOYMENT_GUIDE.md  KLINES_PRELOAD_DEPLOYMENT_GUIDE.md  PERSISTENCE_FILTER_DEPLOYMENT.md  QUICK_START_VPS.md  README.md  VPS_DEPLOYMENT_STEPS.md  clear_stats.py  init_db.py  nohup.out  package-lock.json  package.json  pyproject.toml  run.py  run_bot_daemon.sh  setup_vps.sh  start_bot.sh  start_bot_simple.sh  start_redis.sh  stop_bot.sh  test_binance_telegram.py  test_commands_quick.py  test_commands_standalone.py  test_connection.py  test_depth500.py  test_signal_flow.py  test_telegram_bot.py  test_telegram_commands.py  test_telegram_signal_flow.py  test_ticker_fields.py
attached_assets/: Pasted---1761949440835_1761949440836.txt  Pasted--1-ORDER-BOOK-IMBALANCE-0-25--1761950212457_1761950212458.txt  Pasted--1-python--1761950698311_1761950698312.txt  Pasted--49-151-Compiling-C-object-pandas-libs-tslibs-base-cpython-313-x86-64-linux-gnu-so-p-meson-g-1761837460792_1761837460794.txt  Pasted--58-BinanceScanner-WARNING-data-collector-py-153-PRICE-CHECK-SOLUSDT-from-WebSocket--1761856568821_1761856568821.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-BinanceFuturesBot-deactivate-root-ubuntu-s-1vcpu-2gb-fra1-1761845354342_1761845354343.txt  Pasted--venv-root-ubuntu-s-1vcpu-2gb-fra1-01-BinanceFuturesBot-pip-uninstall-y-python-telegram-bot-Fo-1761843214300_1761843214301.txt  Pasted-1--1761601487387_1761601487388.txt  (+37 more)
bot/: main.py  telegram_bot.py
(+29 files in other folders)
